<resources>
    <string name="app_name">CoursePlannerApp</string>
    <string name="home_page_Header">Course Planner</string>
    <string name="home_page_summary">All your <u>Course Planning</u> in One Place</string>
    <string name="home_page_jingle">Efficient and Organized solutions for all your course planning needs</string>
    <string name="home_page_img_description">logo</string>

    <string name="home_page_login_btn">SIGN UP OR LOGIN</string>
    <string name="home_page_register_btn">REGISTER</string>


    <string name="welcome_page_user_header_admin_msg">WELCOME ADMIN</string>
    <string name="welcome_page_user_header_msg">WELCOME STUDENT</string>
    <string name="welcome_page_img_description">student logo</string>
    <string name="welcome_page_app_description">Explore our various courses, view your taken courses or generate a timetable!</string>
    <string name="welcome_page_card_home">GITHUB</string>
    <string name="welcome_page_card_library">LIBRARY</string>
    <string name="welcome_page_card_taken">COURSES</string>
    <string name="welcome_page_card_timeline">TIMELINE</string>
    <string name="welcome_page_card_settings">SETTINGS</string>
    <string name="welcome_page_card_logout">LOGOUT</string>


    <string name="welcome_page_courses_btn">COURSES</string>
    <string name="email">  Email </string>
    <string name="password">  Password  </string>
    <string name="password_confirmation">  Confirm Password</string>
    <string-array name="Users">
        <item>Admin</item>
        <item>Student</item>
    </string-array>

    <string name="timeline_header">Timeline</string>
    <string name="timeline_generate">Generate</string>
    <string name="timeline_addmore">Add More Courses</string>
    <string name="timeline_future_header">Add Future Courses</string>

    <string name="future_course_header">Add Courses You Want To Take</string>
    <string name="future_course_added">Added Courses</string>
    <string name="future_generate_text">Generate Timetable</string>
    <string name="filler_text">Filler Text</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>


    <string name="settings_page_username">USERNAME</string>
    <string name="settings_page_go_back_home">HOME</string>
    <string name="settings_page_username_desc_db">EMAIL: EMAIL FROM DB</string>
    <string name="settings_password_text_desc_db">PASSWORD: PASSWORD FROM DB</string>
    <string name="admin_welcome_add_btn">Add Courses</string>
    <string name="admin_welcome_edit_btn">Edit Courses</string>
    <string name="admin_welcome_header">Welcome</string>
    <string name="admin_welcome_description">Choose an option to get started</string>
    <string name="admin_welcome_img_description">Admin Icon</string>

    <string name="admin_add_course_header">Add a Course</string>
    <string name="admin_add_course_code">Course Code</string>
    <string name="admin_add_course_name">Course Title</string>
    <string name="admin_add_course_subheading">Enter Course Information Below</string>
    <string name="admin_add_when_offered">A colored switch represents when the course is offered</string>
    <string name="admin_add_winter_switch">Winter</string>
    <string name="admin_add_fall_switch">Fall</string>
    <string name="admin_add_summer_switch">Summer</string>
    <string name="admin_add_course_btn">Add Course</string>
    <string name="admin_add_course_widget_text">+COURSE</string>
    <string name="admin_edit_course_widget_text">EDIT</string>

    <string name="admin_edit_intro">Click a course to edit!</string>
    <string name="admin_edit_page_factos">To confirm your edits press the edit button at the end</string>
    <string name="confirm_edit">CONFIRM EDIT</string>
    <string name="remove_course">REMOVE COURSE</string>

    <string name="edit_course_e">EDIT COURSE</string>

</resources>