<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/activity_background"
	android:id="@+id/HomePage"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".HomepageActivity">

	<TextView
		android:id="@+id/header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="56dp"
		android:fontFamily="@font/montserrat_bold"
		android:gravity="center|top"
		android:text="@string/home_page_Header"
		android:textColor="@color/uoft_dark"
		android:textSize="32sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.496"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/uoft_img"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:contentDescription="@string/home_page_img_description"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.503"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/header"
		app:srcCompat="@drawable/uoft" />

	<TextView
		android:id="@+id/planner_summary"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:width="250sp"
		android:fontFamily="@font/inter_semibold"
		android:gravity="center"
		android:text="@string/home_page_summary"
		android:textColor="#000000"
		android:textSize="32sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.49"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/uoft_img" />

	<TextView
		android:id="@+id/home_jing"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:width="225sp"
		android:fontFamily="@font/inter_medium"
		android:gravity="center"
		android:text="@string/home_page_jingle"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/planner_summary" />

	<Button
		android:id="@+id/home_login_btn"
		android:layout_width="149dp"
		android:layout_height="49dp"
		android:layout_marginTop="41dp"
		android:width="150sp"
		android:backgroundTint="#1C375B"
		android:text="@string/home_page_login_btn"
		app:cornerRadius="50sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/home_jing"
		app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>