<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddCourse">
    <TextView
        android:id="@+id/admin_add_course_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/admin_add_course_header"
        android:textColor="@color/uoft_dark"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_add_course_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/admin_add_course_subheading"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/admin_add_course_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_course_header"
        app:layout_constraintVertical_bias="0.175" />

    <ImageView
        android:id="@+id/admin_welcome_page_uoft_logo"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/home_page_img_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uoft" />

    <EditText
        android:id="@+id/admin_add_course_code"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:background="@drawable/input"
        android:hint="@string/admin_add_course_code"
        android:paddingLeft="20dp"
        android:textColorHint="@color/uoft_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_course_header"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/admin_add_course_name"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:background="@drawable/input"
        android:hint="@string/admin_add_course_name"
        android:paddingLeft="20dp"
        android:textColorHint="@color/uoft_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_course_code"
        app:layout_constraintVertical_bias="0.104" />
</androidx.constraintlayout.widget.ConstraintLayout>