<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/password2"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_styling"
        android:hint="@string/password"
        android:autofillHints="password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password3"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_styling"
        android:hint="@string/password_confirmation"
        android:autofillHints="password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_styling"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_gravity="start"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_styling"
        android:fontFamily="@font/montserrat"
        android:text="@string/home_page_register_btn"
        app:backgroundTint="#1C375B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password3"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>