<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    tools:context=".UserSettingsActivity">

    <TextView
        android:id="@+id/settings_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/settings_password_text_desc_db"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_username_description" />

    <ImageView
        android:id="@+id/settings_page_user_icon"
        android:layout_width="382dp"
        android:layout_height="242dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_settings_icon" />

    <TextView
        android:id="@+id/settings_page_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/settings_page_username"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_page_user_icon" />

    <Button
        android:id="@+id/settings_page_go_back"
        android:layout_width="192dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:width="150sp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/settings_page_go_back_home"
        android:textColor="@color/uoft_dark"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_page_user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/settings_username_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/settings_page_username_desc_db"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_page_user_name" />


</androidx.constraintlayout.widget.ConstraintLayout>